# Copyright 2022 The Dawn Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../scripts/dawn_overrides_with_defaults.gni")

import("${dawn_root}/scripts/dawn_features.gni")

###############################################################################
# GLFW utils
###############################################################################

if (dawn_supports_glfw_for_windowing) {
  static_library("dawn_glfw") {
    configs += [ "${dawn_root}/src/dawn/common:internal_config" ]

    sources = [
      "utils.cpp",
      "utils.h",
    ]
    deps = [ "${dawn_root}/src/dawn/utils:glfw" ]
    libs = []
    frameworks = []

    if (dawn_enable_metal) {
      sources += [ "utils_metal.mm" ]
      frameworks += [ "Metal.framework" ]
    }

    public_deps = [ "${dawn_root}/include/dawn:cpp_headers" ]
  }
}
